--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <div class="embla">
   <div class="embla__container">
-    <div class="embla__slide">Slide 1</div>
-    <div class="embla__slide">Slide 2</div>
-    <div class="embla__slide">Slide 3</div>
+    <div class="embla__slide"></div>
+    <div class="embla__slide"></div>
+    <div class="embla__slide"></div>
   </div>
 </div>
     
