--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
 
 <div id="container">
-    <div class="buddy" style="display: block;"><div class="avatar"  style="display: block;"></div></div>
+    <div class="buddy" style="display: block;"><div class="avatar"  style="display: block;"><img src="https://cdn.glitch.com/aa4ccdf6-391c-4067-add9-f831ece3abbb%2Fdoggie.gif?v=1617732816207" width="100%"></div></div>
     <div class="buddy"><div class="avatar" style="display: block;"></div></div>  
     <div class="buddy"><div class="avatar" style="display: block;"></div></div>  
 <div class="buddy"><div class="avatar" style="display: block;"></div></div>  
