--- a/index.html
+++ b/index.html
@@ -24,7 +24,17 @@
     <div id="container">
       <div class="buddy" style="display: block;">
         <div class="avatar" style="display: block;">
-          <img
+          <h1>
+            I'm Listening
+          </h1>
+          <h3>
+            Swipe this card to start
+          </h3>
+        </div>
+      </div>
+      <div class="buddy">
+        <div class="avatar" style="display: block;">
+        <img
             src="https://cdn.glitch.com/aa4ccdf6-391c-4067-add9-f831ece3abbb%2Fdoggie.gif?v=1617732816207"
             width="100%"
           />
@@ -32,9 +42,6 @@
             Hello this is a quick test of the text
           </h1>
         </div>
-      </div>
-      <div class="buddy">
-        <div class="avatar" style="display: block;"></div>
       </div>
       <div class="buddy">
         <div class="avatar" style="display: block;"></div>
