--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="https://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js"></script>
-
+    
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css" />
 
@@ -24,11 +24,15 @@
     <div id="container">
       <div class="buddy" style="display: block;">
         <div class="avatar" style="display: block;">
-          <h1>
+          <img id="introimg"
+            src="https://cdn.glitch.com/aa4ccdf6-391c-4067-add9-f831ece3abbb%2Fintro.png?v=1617738256386"
+            width="100%"
+          />
+          <h1 id="introh1">
             I'm Listening
           </h1>
-          <h3>
-            Swipe this card to start
+          <h3 id="introh3">
+            Swipe this card to start!
           </h3>
         </div>
       </div>
