👙🌑 Checkpoint ./index.html:633222/933

--- a/index.html
+++ b/index.html
@@ -38,13 +38,21 @@
       </div>
       <div class="buddy">
         <div class="avatar" style="display: block;">
-        <img
-            src="https://cdn.glitch.com/aa4ccdf6-391c-4067-add9-f831ece3abbb%2Fdoggie.gif?v=1617732816207"
-            width="100%"
-          />
           <h1>
-            Hello this is a quick test of the text
+            Instructions
           </h1>
+          <p>
+            This is a deck of cards with funny, wierd, curious questions to help people know each other better
+          </p>
+          <p>
+            Take turns swiping the cards and answering the questions as a group or a pair. Or make up your own rules!
+          </p>
+          <p>
+            Each time you refresh the page, we pick a new set of 32 questions from a bank of 108, so each experience will hopefully stay fresh!
+          </p>
+          <p>
+            Enjoy and thanks for playing!
+          </p>
         </div>
       </div>
       <div class="buddy">
