🍉📯 Checkpoint ./index.html:633222/2086 ./.glitch-assets:633222/841

--- a/index.html
+++ b/index.html
@@ -56,7 +56,18 @@
         </div>
       </div>
       <div class="buddy">
-        <div class="avatar" style="display: block;"></div>
+        <div class="avatar" style="display: block;">
+          <h1>
+            All Done!
+          </h1>
+          <h2>
+            You can close this window OR refresh it to shuffle a new set of questions
+          </h2>
+          <h2>
+            Either way, thanks for playing! 
+          </h2>
+
+        </div>
       </div>
       <div class="buddy">
         <div class="avatar" style="display: block;"></div>
