⛩😂 Checkpoint ./index.html:633222/18

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             I'm Listening
           </h1>
           <h3 id="introh3">
-            Swipe this card to start!
+            Swipe this  from it's bottom card to start!
           </h3>
         </div>
       </div>
