--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     />
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="https://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js"></script>
-    
+
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css" />
 
@@ -21,59 +23,65 @@
   </head>
 
   <body>
-    <div id="container">
-      <div class="buddy" style="display: block;">
-        <div class="avatar" style="display: block;">
-          <img id="introimg"
-            src="https://cdn.glitch.com/aa4ccdf6-391c-4067-add9-f831ece3abbb%2Fintro.png?v=1617738256386"
-            width="100%"
-          />
-          <h1 id="introh1">
-            I'm Listening
-          </h1>
-          <h3 id="introh3">
-            Swipe this  from it's bottom card to start!
-          </h3>
+    <div id="app">
+      <div id="container">
+        <div class="buddy" style="display: block;">
+          <div class="avatar" style="display: block;">
+            <img
+              id="introimg"
+              src="https://cdn.glitch.com/aa4ccdf6-391c-4067-add9-f831ece3abbb%2Fintro.png?v=1617738256386"
+              width="100%"
+            />
+            <h1 id="introh1">
+              I'm Listening
+            </h1>
+            <h3 id="introh3">
+              Swipe this from it's bottom card to start!
+            </h3>
+          </div>
         </div>
-      </div>
-      <div class="buddy">
-        <div class="avatar" style="display: block;">
-          <h1>
-            Instructions
-          </h1>
-          <p>
-            This is a deck of cards with funny, wierd, curious questions to help people know each other better
-          </p>
-          <p>
-            Take turns swiping the cards and answering the questions as a group or a pair. Or make up your own rules!
-          </p>
-          <p>
-            Each time you refresh the page, we pick a new set of 32 questions from a bank of 108, so each experience will hopefully stay fresh!
-          </p>
-          <p>
-            Enjoy and thanks for playing!
-          </p>
+        <div class="buddy">
+          <div class="avatar" style="display: block;">
+            <h1>
+              Instructions
+            </h1>
+            <p>
+              This is a deck of cards with funny, wierd, curious questions to
+              help people know each other better
+            </p>
+            <p>
+              Take turns swiping the cards and answering the questions as a
+              group or a pair. Or make up your own rules!
+            </p>
+            <p>
+              Each time you refresh the page, we pick a new set of 32 questions
+              from a bank of 108, so each experience will hopefully stay fresh!
+            </p>
+            <p>
+              Enjoy and thanks for playing!
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="buddy">
-        <div class="avatar" style="display: block;">
-          <h1>
-            All Done!
-          </h1>
-          <h2>
-            You can close this window OR refresh it to shuffle a new set of questions
-          </h2>
-          <h2>
-            Either way, thanks for playing! 
-          </h2>
-
+        <div class="buddy">
+          <div class="avatar" style="display: block;">
+            <h1>
+              All Done!
+            </h1>
+            <h2>
+              You can close this window OR refresh it to shuffle a new set of
+              questions
+            </h2>
+            <h2>
+              Either way, thanks for playing!
+            </h2>
+          </div>
         </div>
-      </div>
-      <div class="buddy">
-        <div class="avatar" style="display: block;"></div>
-      </div>
-      <div class="buddy">
-        <div class="avatar" style="display: block;"></div>
+        <div class="buddy">
+          <div class="avatar" style="display: block;"></div>
+        </div>
+        <div class="buddy">
+          <div class="avatar" style="display: block;"></div>
+        </div>
       </div>
     </div>
   </body>
