--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css" />
-
-    <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
   </head>
 
   <body>
@@ -74,6 +71,9 @@
             <h2>
               Either way, thanks for playing!
             </h2>
+            <button>
+              Add a Question!
+            </button>
           </div>
         </div>
         <div class="buddy">
@@ -84,5 +84,33 @@
         </div>
       </div>
     </div>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-database.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-analytics.js"></script>
+
+    <script>
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      var firebaseConfig = {
+        apiKey: "AIzaSyD_G17rMA-gp3KTcoSvgFuHTojdSlmOvPM",
+        authDomain: "imlistening.firebaseapp.com",
+        projectId: "imlistening",
+        storageBucket: "imlistening.appspot.com",
+        messagingSenderId: "57006535507",
+        appId: "1:57006535507:web:2c540c753ab510ab0367a6",
+        measurementId: "G-D86DM43B98"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+    </script>
+
+    <!-- import the webpage's javascript file -->
+    <script src="/script.js" defer></script>
   </body>
 </html>
