🗻🙇 Checkpoint ./script.js:633222/2 ./index.html:633222/964 ./style.css:633222/71

--- a/index.html
+++ b/index.html
@@ -65,19 +65,21 @@
               All Done!
             </h1>
             <h2>
-              You can close this window OR refresh it to shuffle a new set of
-              questions
+              You can refresh this page to shuffle a new set of questions
             </h2>
             <h2>
-              Either way, thanks for playing!
+              Or add your own question to the pool to make future rounds more interesting in the future for others and yourself
             </h2>
-            <button>
-              Add a Question!
-            </button>
+            <h2 style="color:#c64365">
+              Swipe this card to add a question!
+            </h2>
           </div>
         </div>
         <div class="buddy">
-          <div class="avatar" style="display: block;"></div>
+          <div class="avatar" style="display: block;">
+          <input type="text" id="question" placeholder="Your Amazing Question..">
+         
+          </div>
         </div>
         <div class="buddy">
           <div class="avatar" style="display: block;"></div>
