--- a/index.html
+++ b/index.html
@@ -77,9 +77,8 @@
         </div>
         <div class="buddy">
           <div class="avatar" style="display: block;">
-          <input type="text" id="question" placeholder="Your Amazing Question..">
-         
-          </div>
+            <textarea id="question" name="question" rows="8" cols="50" placeholder="Your Amazing Question....." style="height:250px;resize:none;"></textarea>
+            </div>
         </div>
         <div class="buddy">
           <div class="avatar" style="display: block;"></div>
