🕰⏳ Checkpoint ./index.html:633222/928 ./script.js:633222/112

--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
             <h1 id="introh1">
               I'm Listening
             </h1>
-            <h3 id="introh3">
-              Swipe this from it's bottom card to start!
-            </h3>
+            <h2>
+              A Digital Card Game
+            </h2>
+            <h4 style="color:#c64365">
+              Swipe the bottom to start!
+            </h4>  
           </div>
         </div>
         <div class="buddy">
@@ -75,13 +78,23 @@
             </h2>
           </div>
         </div>
-        <div class="buddy">
+        <div class="buddy" id="questionHolder">
           <div class="avatar" style="display: block;">
             <textarea id="question" name="question" rows="8" cols="50" placeholder="Your Amazing Question....." style="height:250px;resize:none;"></textarea>
-            </div>
+            <h2 style="color:#c64365">
+              Swipe this card to Submit Your Question!
+            </h2>  
+          </div>
         </div>
         <div class="buddy">
-          <div class="avatar" style="display: block;"></div>
+          <div class="avatar" style="display: block;">
+            <h1>
+              Thank You!
+            </h1>
+            <h2>
+              Your contribution will enrich the lives of other players!
+            </h2>
+          </div>
         </div>
       </div>
     </div>
