--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
     </script>
 
     <!-- import the webpage's javascript file -->
+    <script src="/images.js" defer></script>
     <script src="/script.js" defer></script>
   </body>
 </html>
