--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
             </p>
           </div>
         </div>
+        <card-item
+                v-for="item in entries"
+                v-bind:card="item"
+                v-bind:key="item.id"
+        >
+        </card-item>
         <div class="buddy">
           <div class="avatar" style="display: block;">
             <h1>
