🙍🌮 Checkpoint ./script.js:633222/102 ./index.html:633222/1663

--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>I'm Listening</title>
+    
+    <!-- Site Favicon -->
+    <link
+      id="favicon"
+      rel="icon"
+      href="https://cdn.glitch.com/34525fe5-c55a-46a2-ade0-7fd82e149df2%2Fwhite.png?v=1615177105156"
+      type="image/x-icon"
+    />
 
     <link
       rel="stylesheet"
       href="https://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.css"
     />
-    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="https://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js"></script>
-
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/mobile/1.5.0-rc1/jquery.mobile-1.5.0-rc1.min.js" integrity="sha256-c3VbCrdCtTHmXYAuxRT4D0Cy5VC/0zBnXVRIvJiV9xo=" crossorigin="anonymous"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 
     <!-- import the webpage's stylesheet -->
@@ -65,8 +73,7 @@
         <card-item
                 v-for="item in entries"
                 v-bind:card="item"
-                v-bind:key="item.id"
-        >
+                v-bind:key="item.id">
         </card-item>
         <div class="buddy">
           <div class="avatar" style="display: block;">
