--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link
       id="favicon"
       rel="icon"
-      href="https://cdn.glitch.com/34525fe5-c55a-46a2-ade0-7fd82e149df2%2Fwhite.png?v=1615177105156"
+      href="https://cdn.glitch.com/aa4ccdf6-391c-4067-add9-f831ece3abbb%2Fintro.png?v=1617738256386"
       type="image/x-icon"
     />
 
