🍁🐏 Checkpoint ./script.js:633222/246 ./index.html:633222/1122

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link
       id="favicon"
       rel="icon"
-      href="https://cdn.glitch.com/aa4ccdf6-391c-4067-add9-f831ece3abbb%2Fintro.png?v=1617738256386"
+      href="https://cdn.glitch.com/34525fe5-c55a-46a2-ade0-7fd82e149df2%2Fwhite.png?v=1615177105156"
       type="image/x-icon"
     />
 
@@ -71,9 +71,9 @@
           </div>
         </div>
         <card-item
-                v-for="item in entries"
-                v-bind:card="item"
-                v-bind:key="item.id">
+                v-for="card in entries"
+                v-bind:card="card"
+                v-bind:key="card.id">
         </card-item>
         <div class="buddy">
           <div class="avatar" style="display: block;">
