🚅🌉 Checkpoint ./index.html:633222/269 ./script.js:633222/4

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link
       id="favicon"
       rel="icon"
-      href="https://cdn.glitch.com/34525fe5-c55a-46a2-ade0-7fd82e149df2%2Fwhite.png?v=1615177105156"
+      href="https://cdn.glitch.com/aa4ccdf6-391c-4067-add9-f831ece3abbb%2Fintro.png?v=1617738256386"
       type="image/x-icon"
     />
 
@@ -43,9 +43,9 @@
             <h2>
               A Digital Card Game
             </h2>
-            <h4 style="color:#c64365">
+            <h3 style="color:#c64365">
               Swipe the bottom to start!
-            </h4>  
+            </h3>  
           </div>
         </div>
         <div class="buddy">
@@ -53,21 +53,20 @@
             <h1>
               Instructions
             </h1>
-            <p>
-              This is a deck of cards with funny, wierd, curious questions to
-              help people know each other better
-            </p>
-            <p>
+            <h3>
+              This is a deck of cards with funny, wierd, curious questions.
+            </h3>
+            <h3>
               Take turns swiping the cards and answering the questions as a
               group or a pair. Or make up your own rules!
-            </p>
-            <p>
-              Each time you refresh the page, we pick a new set of 32 questions
-              from a bank of 108, so each experience will hopefully stay fresh!
-            </p>
-            <p>
+            </h3>
+            <h3>
+              Each time you refresh the page, we pick a new set of 7 questions
+              from a bank of 66, so each experience will hopefully stay fresh!
+            </h3>
+            <h3>
               Enjoy and thanks for playing!
-            </p>
+            </h3>
           </div>
         </div>
         <card-item
