😄🏄 Checkpoint ./style.css:633222/245 ./index.html:633222/356

--- a/index.html
+++ b/index.html
@@ -94,9 +94,12 @@
         </div>
         <div class="buddy" id="questionHolder">
           <div class="avatar" style="display: block;">
-            <textarea id="question" name="question" rows="8" cols="50" placeholder="Your Amazing Question....." style="height:250px;resize:none;"></textarea>
-            <h2 style="color:#c64365">
-              Swipe this card to Submit Your Question!
+            <textarea id="question" name="question" rows="8" cols="50" placeholder="Your Amazing Question....."></textarea>
+            <h2>
+              Your question can be about anything, just keep it polite, concise and fun (or meaningful).
+            </h2>
+            <h2 >
+              Swipe <b style="color:#c64365">right</b> to Submit Your Question!
             </h2>  
           </div>
         </div>
