🕰😎 Checkpoint ./index.html:633222/341 ./script.js:633222/7218

--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
             <h2 >
               Swipe <b style="color:#c64365">right</b> to Submit Your Question!
             </h2>  
+            <h2 >
+              Swipe <b style="color:#c64365">left</b> to cancel your submission.
           </div>
         </div>
         <div class="buddy" id="second_end">
@@ -109,7 +111,7 @@
               Thank You!
             </h1>
             <h2>
-              Your contribution will enrich the lives of other players!
+              Hope you had fun and will come again!
             </h2>
             <h2>
               Refresh this page if you want to play again!
